gitops/core/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - name: contour
      namespace: contour
  hostnames:
    - "prometheus.amedsaude.com.br"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
